# brisk-rows

./: LICENSE  README.md  brisk-rows.cabal  cabal.project
brisk-records/: brisk-records.cabal
brisk-records/src/BriskRows/: Demo.hs  Fields.hs  Idx.hs  RV.hs  RVf.hs  RVtf.hs
brisk-records/src/BriskRows/Internal/: RV.hs  RVf.hs  RVtf.hs  Sem.hs
brisk-records/src/BriskRows/Internal/RV/: Ambiguous.hs  Operators.hs  Proxy.hs
brisk-records/src/BriskRows/Internal/RVf/: Ambiguous.hs  Operators.hs  Proxy.hs
brisk-records/src/BriskRows/Internal/RVtf/: Ambiguous.hs  Operators.hs  Proxy.hs
brisk-rows/: brisk-rows.cabal
brisk-rows-test/: brisk-rows-test.cabal
brisk-rows-test/src/: Test.hs
brisk-rows/src/: BriskRows.hs
brisk-rows/src/BriskRows/: Fields.hs  Internal.hs  Plugin.hs  RV.hs  RVf.hs  Sem.hs
brisk-rows/src/BriskRows/Internal/: PP.hs  RV.hs  RVf.hs  RVtf.hs
brisk-rows/src/BriskRows/Internal/RV/: Ambiguous.hs  Operators.hs  Proxy.hs
brisk-rows/src/BriskRows/Internal/RVf/: Ambiguous.hs  Operators.hs  Proxy.hs
brisk-rows/src/BriskRows/Internal/RVtf/: Ambiguous.hs  Operators.hs  Proxy.hs
src/: BriskRows.hs
src/BriskRows/: Internal.hs
src/BriskRows/Internal/: Ambiguous.hs  GHCTypeLits.hs  Plugin.hs  Util.hs
src/BriskRows/Motivation/: Stage1.hs  Stage2.hs  Stage3.hs  Stage4.hs  Stage5.hs
