name:                brisk-records
version:             0.1.0.0
synopsis:            Records and variants on top of brisk-rows
-- description:
license:             BSD-2-Clause
copyright:           2022 Nicolas Frisby
author:              Nicolas Frisby
maintainer:          nicolas.frisby@tweag.io
category:            Types
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
                       BriskRows.Fields
                       BriskRows.Idx
                       BriskRows.RV
                       BriskRows.RVf
                       BriskRows.RVtf

                       BriskRows.Internal.RV
                       BriskRows.Internal.RV.Ambiguous
                       BriskRows.Internal.RV.Operators
                       BriskRows.Internal.RV.Proxy

                       BriskRows.Internal.RVf
                       BriskRows.Internal.RVf.Ambiguous
                       BriskRows.Internal.RVf.Operators
                       BriskRows.Internal.RVf.Proxy

                       BriskRows.Internal.RVtf
                       BriskRows.Internal.RVtf.Ambiguous
                       BriskRows.Internal.RVtf.Operators
                       BriskRows.Internal.RVtf.Proxy

                       BriskRows.Internal.Test
                       BriskRows.Internal.Test2

  default-language:    Haskell2010

  build-depends:       base
                     , containers
                     , ghc-prim

                     , brisk-rows

  ghc-options:        -Wall
                      -Wcompat
                      -Werror
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
