name:                brisk-rows
version:             0.1.0.0
synopsis:            A practical and inflexible implementation of row types
-- description:
license:             BSD-2-Clause
copyright:           2022 Nicolas Frisby
author:              Nicolas Frisby
maintainer:          nicolas.frisby@tweag.io
category:            Types
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
                       BriskRows
                       BriskRows.Plugin
                       BriskRows.Fields
                       BriskRows.RV
                       BriskRows.RVf
                       BriskRows.RVtf

                       BriskRows.Internal
                       BriskRows.Internal.RV
                       BriskRows.Internal.RV.Ambiguous
                       BriskRows.Internal.RV.Operators
                       BriskRows.Internal.RV.Proxy

                       BriskRows.Internal.RVf
                       BriskRows.Internal.RVf.Ambiguous
                       BriskRows.Internal.RVf.Operators
                       BriskRows.Internal.RVf.Proxy

                       BriskRows.Internal.RVtf
                       BriskRows.Internal.RVtf.Ambiguous
                       BriskRows.Internal.RVtf.Operators
                       BriskRows.Internal.RVtf.Proxy

                       BriskRows.Internal.Sem

  default-language:    Haskell2010
  other-extensions:
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       EmptyDataDecls
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       OverloadedStrings
                       PackageImports
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeFamilyDependencies
                       TypeInType
                       TypeOperators
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns

  build-depends:       base
                     , containers
                     , ghc >= 9
                     , ghc-prim

  ghc-options:         -Werror
                       -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wno-unticked-promoted-constructors
