name:                brisk-rows
version:             0.1.0.0
synopsis:            A practical and inflexible implementation of row types
-- description:
license:             BSD-2-Clause
copyright:           2022 Nicolas Frisby
author:              Nicolas Frisby
maintainer:          nicolas.frisby@tweag.io
category:            Types
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
                       BriskRows
                       BriskRows.Internal
                       BriskRows.Internal.PP
                       BriskRows.Plugin

  default-language:    Haskell2010

  build-depends:       base
                     , ghc >= 9
                     , ghc-prim

  ghc-options:        -Wall
                      -Wcompat
                      -Werror
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wno-unticked-promoted-constructors
                      -Wpartial-fields
                      -Wredundant-constraints
